plugins {
	id 'java'
	id 'java-test-fixtures'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'checkstyle'
}

bootJar {
	enabled = false
}

repositories {
	mavenCentral()
}

subprojects {
	group = 'backend'
	version = '0.0.1-SNAPSHOT'
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17

	apply plugin: 'java'
	apply plugin: 'java-test-fixtures'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'
	apply plugin: 'checkstyle'

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	repositories {
		mavenCentral()
	}

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-web'
		implementation 'org.springframework.boot:spring-boot-starter-security'
		implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
		implementation 'org.springframework.boot:spring-boot-starter-validation'
		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
		implementation 'org.springframework.boot:spring-boot-starter-data-redis'

		runtimeOnly 'org.postgresql:postgresql'
		implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
		annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
		annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'

		implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'

		implementation 'io.jsonwebtoken:jjwt:0.9.1'
		implementation 'javax.xml.bind:jaxb-api:2.3.1'

		implementation 'net.coobird:thumbnailator:0.4.20'

		implementation 'org.apache.poi:poi:5.5.0'
		implementation 'org.apache.poi:poi-ooxml:5.5.0'

		testFixturesImplementation 'org.springframework.boot:spring-boot-starter-test'
		testFixturesRuntimeOnly 'org.junit.platform:junit-platform-launcher'
		testFixturesImplementation 'org.springframework.boot:spring-boot-starter-security'
		testFixturesImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
		testFixturesImplementation 'org.projectlombok:lombok'
		testFixturesImplementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
		testFixturesImplementation 'org.springframework.boot:spring-boot-starter-data-redis'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
	}

	checkstyle {
		maxWarnings = 0
		ignoreFailures = true
		configFile = rootProject.file("config/checkstyle/checkstyle.xml")
		configProperties = ["suppressionFile": rootProject.file("config/checkstyle/suppressions.xml")]
		toolVersion = "10.12.5"
	}

	test {
		useJUnitPlatform()
	}
}
